[gd_scene load_steps=31 format=2]

[ext_resource path="res://players/player.gd" type="Script" id=1]
[ext_resource path="res://players/states/motion/on_ground/move.gd" type="Script" id=2]
[ext_resource path="res://players/states/motion/on_ground/idle.gd" type="Script" id=3]
[ext_resource path="res://players/player_state_machine.gd" type="Script" id=4]
[ext_resource path="res://players/states/motion/in_air/jump.gd" type="Script" id=5]
[ext_resource path="res://players/states/motion/in_air/fall.gd" type="Script" id=6]
[ext_resource path="res://players/weapon/weapon.tscn" type="PackedScene" id=7]
[ext_resource path="res://players/weapon/weapon_pivot.gd" type="Script" id=8]
[ext_resource path="res://players/states/combat/melee.gd" type="Script" id=9]
[ext_resource path="res://players/states/combat/shoot.gd" type="Script" id=10]
[ext_resource path="res://players/projectile/projectile_spawner.gd" type="Script" id=11]
[ext_resource path="res://players/states/motion/launch.gd" type="Script" id=12]
[ext_resource path="res://players/states/motion/death.gd" type="Script" id=13]
[ext_resource path="res://players/sprites.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 14 )
region = Rect2( 0, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 14 )
region = Rect2( 60, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 14 )
region = Rect2( 180, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 14 )
region = Rect2( 180, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 14 )
region = Rect2( 180, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 14 )
region = Rect2( 0, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 14 )
region = Rect2( 0, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 14 )
region = Rect2( 120, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 14 )
region = Rect2( 120, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 14 )
region = Rect2( 60, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 14 )
region = Rect2( 60, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 14 )
region = Rect2( 120, 0, 60, 60 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 6 ) ],
"loop": true,
"name": "move_left",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "jump_right",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 11 ) ],
"loop": true,
"name": "move_right",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "jump_left",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "melee_left",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "melee_right",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 26 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 24.5 )

[node name="Player1" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 1 )
player_name = "Player 1"

[node name="SpritePivot" type="Position2D" parent="."]
position = Vector2( 0, 29 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SpritePivot"]
position = Vector2( 0, -29 )
frames = SubResource( 4 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource( 4 )
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 3 )

[node name="Move" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 2 )

[node name="Jump" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 5 )
jump_force = 750.0

[node name="Fall" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 6 )

[node name="Melee" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 9 )

[node name="Shoot" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 10 )

[node name="Launch" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 12 )

[node name="Death" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 13 )

[node name="WeaponPivot" type="Position2D" parent="."]
script = ExtResource( 8 )

[node name="Offset" type="Position2D" parent="WeaponPivot"]
position = Vector2( 18, 4 )

[node name="Weapon" parent="WeaponPivot/Offset" instance=ExtResource( 7 )]

[node name="ProjectileSpawner" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="CooldownTimer" type="Timer" parent="ProjectileSpawner"]
one_shot = true

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 1.5 )
shape = SubResource( 2 )

[node name="LaunchTimer" type="Timer" parent="."]
one_shot = true

[connection signal="attacked" from="." to="PlayerStateMachine" method="_on_Player_attacked"]
[connection signal="state_changed" from="PlayerStateMachine" to="WeaponPivot/Offset/Weapon" method="_on_PlayerStateMachine_state_changed"]
[connection signal="state_changed" from="PlayerStateMachine" to="ProjectileSpawner" method="_on_PlayerStateMachine_state_changed"]
[connection signal="attack_finished" from="WeaponPivot/Offset/Weapon" to="PlayerStateMachine/Melee" method="_on_Weapon_attack_finished"]
[connection signal="cooldown_finished" from="ProjectileSpawner" to="PlayerStateMachine/Shoot" method="_on_ProjectileSpawner_cooldown_finished"]
[connection signal="timeout" from="ProjectileSpawner/CooldownTimer" to="ProjectileSpawner" method="_on_CooldownTimer_timeout"]
[connection signal="area_entered" from="AttackDetector" to="." method="_on_AttackDetector_area_entered"]
[connection signal="timeout" from="LaunchTimer" to="PlayerStateMachine/Launch" method="_on_LaunchTimer_timeout"]
